Fix: Use no API calls greater than JDK 1.8